# psp-cli

./: .gitignore  LICENSE  flake.nix  pyproject.toml
src/psp/: client.py  config.py  main.py  output.py
src/psp/auth/: __init__.py  core.py  device_auth.py  store.py
src/psp/commands/: auth.py  cfg.py  groups.py  instances.py  problems.py  projects.py  resources.py  solvers.py
